--- a/package.json
+++ b/package.json
@@ -12,13 +12,26 @@
   },
   "author": "AndrewBalan",
   "license": "ISC",
+  "browserslist": [
+    "> 1%"
+  ],
   "bugs": {
     "url": "https://github.com/AndreyBalan/food/issues"
   },
   "homepage": "https://github.com/AndreyBalan/food#readme",
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
+    "core-js": "^3.30.2",
     "json-server": "^0.17.3",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "es6-promise": "^4.2.8",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
